# lambda-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.json  index.py  index_test.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  dev.yml  main.yml
app/: Dockerfile  evaluation_response.py  requirements.txt
app/agents/: chatbot_summarised_memory_agent.py  llm_factory.py  profiling_agent.py
evaluation_function/: dev.py  evaluation.py  evaluation_test.py  main.py  preview_test.py
evaluation_function/agents/: chatbot_summarised_memory_agent.py  llm_factory.py  no_memory_agent.py  no_summary_no_memory_agent.py  profiling_agent.py
evaluation_function/agents/prompts/: sum_conv_pref.py  test_conversations.json
evaluation_function/db_analytics/: merge_data.py  nb_submissions.py  query_utils.py
src/: module.py  module_response.py  module_test.py
src/agents/: chatbot_summarised_memory_agent.py  llm_factory.py  no_memory_agent.py  no_summary_no_memory_agent.py  profiling_agent.py
src/agents/base_agent/: base_agent.py  base_prompts.py
src/agents/data/: example_input_1.json  example_input_2.json  example_input_3.json
src/agents/development_agents/: internal_summary_memory_agent.py  no_summary_no_memory_agent.py
src/agents/google_learnLM_agent/: google_learnLM_agent.py  google_learnLM_prompts.py
src/agents/informational_agent/: informational_agent.py  informational_prompts.py
src/agents/prompts/: sum_conv_pref.py
src/agents/socratic_agent/: socratic_agent.py  socratic_prompts.py
src/agents/utils/: langgraph_viz.py  (+8 more)
(+11 files in other folders)
