[tool.poetry]
name = "evaluation-function"
version = "0.1.0"
description = ""
authors = ["neagualexa <ngu.alexandra@gmail.com>"]
readme = "README.md"
packages = [{ include = "evaluation_function" }]

[tool.poetry.scripts]
evaluation_function = "evaluation_function.main:main"
evaluation_function_dev = "evaluation_function.dev:dev"

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.6"
langchain-chroma = "^0.1.4"
langchain-community = "^0.3.4"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.5"
langchain-text-splitters = "^0.3.1"
langchainhub = "^0.1.21"
langdetect = "^1.0.9"
langgraph = "^0.2.43"
langsmith = "^0.1.139"
lf_toolkit = { git = "https://github.com/lambda-feedback/toolkit-python.git", branch = "main", extras = [
    "ipc",
] }

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
